# sway

./: README.md
anth/: README.md  main.py  pyproject.toml
babyagi/: main.py  pyproject.toml
chat-with-docs/: main.py  pyproject.toml  run.sh
circle/: _images  app.py  main.py  pyproject.toml
circle/image-viewer/: package-lock.json  package.json
circle/image-viewer/src/: App.js
circle/static/: _images
cuda/: .gitignore  README.md  cuda_install.sh
dev_agent/: main.py  pyproject.toml
i2v/: _i2v_in  _i2v_out  _in.i2v  _in_i2v  _out  main.py  pyproject.toml
img2vid/: _out
img_crop/: crop.py
lang/: index.json  main.py  pyproject.toml
langchain/: pyproject.toml
modelscope/: main.py  requirements.txt
monitor/: main.py  pyproject.toml  win.py
mp4_ops/: dir_to_mp4.sh  fix.sh  lastframe.sh  mp3.sh  mp4.sh  reverse.sh  vid_to_mp4.sh
mp4fix/: _in_video  fix.sh
render_art/: life_75.py  pyproject.toml
scrape/: main.py  pyproject.toml  rap.py
socketio/: app.py  pyproject.toml
socketio/templates/: index.html
text2vid/: README.md  main.py  pyproject.toml
vid2img/: run_lastframe.sh
whisp/: _in  main.py  pyproject.toml  requirements.txt  run.sh
whisper/: .gitignore  main.py  run.sh
ytcc/: .gitignore  main.py  pyproject.toml  simple.py
