[tool.poetry]
name = "dev-agent"
version = "0.1.0"
description = ""
authors = ["Sway Ducky <swayducky@gmail.com>"]
readme = "README.md"
packages = [{include = "dev_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.242"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
