[tool.poetry]
name = "lang"
version = "0.1.0"
description = ""
authors = ["Sway Ducky <swayducky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.129"
llama-index = "^0.5.5"
python-dotenv = "^1.0.0"
ebooklib = "^0.18"
pypdf2 = "^3.0.1"
transformers = "^4.27.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
