[tool.poetry]
name = "ytcc"
version = "0.1.0"
description = ""
authors = ["Sway Ducky <swayducky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2023.3.4"
moviepy = "^1.0.3"
webvtt-py = "^0.4.6"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
